fix: the first section is stretched to full screen

--- a/src/assets/scss/adaptive/_header.scss
+++ b/src/assets/scss/adaptive/_header.scss
@@ -91,4 +91,24 @@
 		height: 40px;
 		padding-right: 0;
 	}
+
+	.header__mobile {
+		display: flex;
+
+		.container {
+			width: 100%;
+		}
+
+		.header__top {
+			display: flex;
+			align-items: center;
+
+			width: 100%;
+			height: 10vh;
+		}
+
+		.header__top-wrapper {
+			padding: 0;
+		}
+	}
 }
