--- a/src/assets/scss/pages/index/adaptive/_promo.scss
+++ b/src/assets/scss/pages/index/adaptive/_promo.scss
@@ -203,9 +203,15 @@
 
 @media screen and (max-width: 480px) {
 	.promo {
-		height: 488px;
+		height: 90vh;
 
 		background-image: url('../images/promo/deer-render-mobile.png');
+
+		.promo__header,
+		.container,
+		.promo__header-wrapper {
+			height: 100%;
+		}
 
 		@include backgroundStyle;
 	}
@@ -238,9 +244,12 @@
 	}
 
 	.promo__expansion {
+		position: absolute;
+		bottom: 20px;
+
 		width: 100%;
-		margin-top: 110px;
 	}
+
 	.promo__expansion span { display: none; }
 
 	.promo__button-install {
@@ -273,10 +282,17 @@
 		line-height: 149%;
 	}
 
+	.promo__header-text {
+		position: absolute;
+		top: 50%;
+
+		transform: translateY(-50%);
+	}
+
 	.promo__header-left {
 		width: 100%;
 		margin: 0;
-		margin-top: 149px;
+		margin-top: 0;
 	}
 
 	.promo__subtitle {
